--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": ">=7.1",
 
         "symfony/http-kernel": "^4.0",
+        "symfony/dependency-injection": "^4.0",
         "react/promise": "*"
     },
     "require-dev": {
