--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,10 @@
     "autoload": {
         "psr-4": {
             "Symfony\\Component\\HttpKernel\\": ""
-        }
+        },
+        "exclude-from-classmap": [
+            "/Tests/"
+        ]
     },
     "scripts": {
         "fix-code": [
